--- a/pkg/spyglass/lenses/common/static/spyglass-lens.html
+++ b/pkg/spyglass/lenses/common/static/spyglass-lens.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Spyglass Lens: {{.Title}}</title>
   <base href="{{.BaseURL}}" target="_parent">
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="/static/spyglass/lens.css">
