--- a/pkg/spyglass/lenses/podinfo/template.html
+++ b/pkg/spyglass/lenses/podinfo/template.html
@@ -1,7 +1,7 @@
 {{define "header"}}
 <link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript" src="script_bundle.min.js"></script>
-<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.min.js"></script>
 {{end}}
 
 {{define "body"}}
